--- a/spacematters.bib
+++ b/spacematters.bib
@@ -14,6 +14,14 @@
   publisher={Springer}
 }
 
+@article{wheeler2006urban,
+  title={Urban decentralization and income inequality: Is sprawl associated with rising income segregation across neighborhoods?},
+  author={Wheeler, Christopher H},
+  year={2006},
+  journal = {FRB of St. Louis Working Paper},
+  number = {No. 2006-037A}
+}
+
 @book{saltelli2008global,
   title={Global sensitivity analysis: the primer},
   author={Saltelli, Andrea and Ratto, Marco and Andres, Terry and Campolongo, Francesca and Cariboni, Jessica and Gatelli, Debora and Saisana, Michaela and Tarantola, Stefano},
@@ -642,13 +650,6 @@ year = {2017}
   publisher={Macmillan}
 }
 
-@article{wheeler2006urban,
-  title={Urban decentralization and income inequality: Is sprawl associated with rising income segregation across neighborhoods?},
-  author={Wheeler, Christopher H},
-  year={2006},
-  publisher = {FRB of St. Louis Working Paper}
-}
-
 @article{schwanen2001travel,
   title={Travel behaviour in Dutch monocentric and policentric urban systems},
   author={Schwanen, Tim and Dieleman, Frans M and Dijst, Martin},
@@ -861,5 +862,19 @@ year = {2017}
   publisher={Taylor \& Francis}
 }
 
+@article{barner2017multiscale,
+  title={Multiscale Entropy in the Spatial Context of Cities},
+  author={Barner, Martin and Cottineau, Cl{\'e}mentine and Molinero, Carlos and Salat, Hadrien and Stanilov, Kiril and Arcaute, Elsa},
+  journal={arXiv preprint arXiv:1711.09817},
+  year={2017}
+}
 
+@article{white1986segregation,
+  title={Segregation and diversity measures in population distribution},
+  author={White, Michael J},
+  journal={Population index},
+  pages={198--221},
+  year={1986},
+  publisher={JSTOR}
+}
 
